--- a/src/html/contacto.html
+++ b/src/html/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contáctanos - Game Studio</title>
+    <title>Contáctanos - The Game Company</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
                 <div class="rect-inferior"></div>
                 <div class="rect-superior"></div>
             </div>
-            Game Studio
+            The Game Studio
         </div>
         <nav class="navegacion">
             <a href="/src/html/index.html">Home</a>
@@ -61,7 +61,7 @@
                     <div class="icono-contacto">✉</div>
                     <div>
                         <strong>Email</strong><br>
-                        contacto@gamestudio.com
+                        contacto@thegamestudio.com
                     </div>
                 </div>
             </div>
