--- a/src/html/juegos.html
+++ b/src/html/juegos.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>that game company - Games</title>
+    <title>the game company - Games</title>
     <link rel="stylesheet" href="/src/css/juegos.css">
 </head>
 
 <body>
     <div class="head">
-        <p class="title" id="head_title"> <span class="blue_primary_text">that</span> <span
+        <p class="title" id="head_title"> <span class="blue_primary_text">the</span> <span
                 class="yellow_primary_text">game</span> <span class="red_primary_text">company</span> </p>
         <p class="subtitle" id="head_subtitle">
             is a game studio dedicated to creating <span class="blue_primary_text">timeless</span> interactive
