--- a/src/html/noticias.html
+++ b/src/html/noticias.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noticias - Indie Game Studio</title>
+    <title>Noticias - The Game Studio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
                     <div class="escalon escalon-1"></div>
                     <div class="escalon escalon-2"></div>
                     <div class="escalon escalon-3"></div>
-                    <span>Indie Game Studio</span>
+                    <span>The Game Studio</span>
                 </div>
                 <nav class="navegacion">
                     <a href="juegos.html">Juegos</a>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="contenido-noticia">
                         <span class="etiqueta-noticia cian">Eventos</span>
-                        <h2 class="titulo-noticia">¡Nos vemos en la Game Dev Con 2024!</h2>
+                        <h2 class="titulo-noticia">¡Nos vemos en la Game Dev Con 2026!</h2>
                         <p class="descripcion-noticia">
                             Estaremos presentes en la Game Dev Con de este año para mostrar nuestros últimos proyectos. ¡Ven a nuestro stand para probar demos exclusivas y charlar con el equipo!
                         </p>
